# VectorComplier

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE-2.0  LICENSE-MIT  Makefile  NOTICE  README.md  deny.toml
.devcontainer/: devcontainer.json
.github/: SECURITY.md
.github/workflows/: ci.yml
benchmarks/conformance/invalid/: return_inside_block.vcir
benchmarks/datasets/fixture_slice_v0/: manifest.json
benchmarks/datasets/training_slice_v0/: manifest.json  rows.jsonl
benchmarks/datasets/training_slice_v0/programs/: const42.vcir  mul.vcir
benchmarks/examples/: dataset_manifest.example.json  training_row.example.json
benchmarks/fixtures/: decoder_identity_z.onnx  decoder_z_switch.onnx  z_neg_z0.json
benchmarks/manifests/: add.json  const42.json  mul.json
benchmarks/programs/: add.vcir  max_f32.vcir
benchmarks/vectorbench_v0/: suite.json
crates/vc-bridge/: Cargo.toml  README.md
crates/vc-bridge/src/: decoder.rs  lib.rs  onnx.rs
crates/vc-cli/: Cargo.toml  README.md
crates/vc-cli/src/: agent.rs  main.rs  oracle.rs  repair.rs
crates/vc-cli/tests/: cli_smoke.rs  onnx_fixture_decode.rs
crates/vc-ir/: Cargo.toml  README.md
crates/vc-ir/src/: ast.rs  diagnostics.rs  lib.rs  limits.rs  metrics.rs  validate.rs
crates/vc-ir/tests/: validate_proptest.rs
crates/vc-lower-wasm/: Cargo.toml  README.md
crates/vc-lower-wasm/src/: lib.rs  lower.rs
crates/vc-lower-wasm/tests/: end_to_end.rs  golden_wasm_policy.rs
crates/vc-refine/: Cargo.toml  README.md
crates/vc-refine/src/: check.rs  lib.rs  random.rs  refiner.rs  spec.rs
crates/vc-refine/tests/: refine_add_fixture.rs
crates/vc-verify/: Cargo.toml  README.md
crates/vc-verify/src/: lib.rs
crates/vc-verify/tests/: invoke_checks.rs
docs/: ADVERSARIAL_AUDIT.md  AGENT_COMPILER_INTERFACE.md  ARCHITECTURAL_AUDIT.md  ARCHITECTURE.md  CODEBASE_AUDIT_2026-05.md  CONDITIONS_FOR_OBSOLESCENCE.md  DEBUGGING_DECODE.md  DECODER_ROADMAP.md  DEVELOPMENT.md  FULL_LINE_AUDIT.md  IR_VERSIONING.md  LATENT_FIRST_TRAINING_PLAN.md  PREFLIGHT_BEFORE_TRAINING.md  QUICKSTART.md  RESEARCH_IMPLEMENTATION_PLAN.md  RESEARCH_READING_LIST.md  SECURITY.md  TARGETS.md  TRAINING_DATA.md  TRAINING_ON_MAC.md  TRAINING_REWARD_CONTRACT.md  TRUST_AND_CANONICAL_ARTIFACTS.md  VECTORBENCH_V0.md  VETTING_REPORT.md  Z_BUILD.md  Z_CONTRACT.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: vc_ir_parse_validate.rs
schemas/: bench_spec_v1.schema.json  dataset_manifest_v1.schema.json  program_ir_v1.schema.json  program_ir_v2.schema.json  training_manifest_index_v1.schema.json  training_row_v1.schema.json  training_shard_v1.schema.json
scripts/: README.md  batch-eval-training-shard.sh  bootstrap-dev.sh  clean.sh  decode_rank_eval.sh  dump-eval-failures.sh  eval-decode-pipeline.sh  eval-decode-scoreboard.sh  gen_decoder_identity_fixture_onnx.py  gen_decoder_z_switch_fixture_onnx.py  gen_training_rows.py  generate_program_ir_fixtures.py  preflight-lite.sh  preflight.sh  rl_reward_execute_rate.py  target-size.sh  training-oracle.sh  validate-schemas.sh  vectorbench_oracle.py  vectorc-prefix.sh  vectorc_invoke.py  verify-dataset-manifest.sh
skills/: decoder.md  diagnostics.md  language.md  limits.md
