[workspace]
resolver = "2"
members = [
    "crates/vc-ir",
    "crates/vc-lower-wasm",
    "crates/vc-verify",
    "crates/vc-refine",
    "crates/vc-bridge",
    "crates/vc-cli",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Alphabetsoup16/VectorComplier"
rust-version = "1.91"

[workspace.dependencies]
anyhow = "1.0"
libc = "0.2"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Wasmtime 43.x (RustSec wasmtime advisories; keep wasm-encoder aligned with wasmtime deps).
wasm-encoder = "0.244.0"
wasmtime = { version = "43.0.1", default-features = false, features = [
    "runtime",
    "cranelift",
    "std",
    "anyhow",
] }
sha2 = "0.10"
hex = "0.4"
