[package]
name = "vc-bridge"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Latent vector → Program IR bridge (stubs; ONNX optional)"

[dependencies]
anyhow = { workspace = true }
vc-ir = { path = "../vc-ir" }
ort = { version = "=2.0.0-rc.10", optional = true, default-features = false, features = ["std", "ndarray", "download-binaries", "copy-dylibs"] }

[features]
default = []
onnx = ["dep:ort"]
