[package]
name = "vc-ir"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "VectorCompiler program IR (versioned, validated)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = "1"
