[package]
name = "vc-lower-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Lower vc Program IR (v2) to a Wasm MVP module"

[dependencies]
vc-ir = { path = "../vc-ir" }
wasm-encoder = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
vc-verify = { path = "../vc-verify" }
