[package]
name = "vc-refine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Verifier-driven program refinement over Program IR"

[dependencies]
anyhow = { workspace = true }
rand = "0.9"
serde = { workspace = true }
serde_json = { workspace = true }
vc-ir = { path = "../vc-ir" }
vc-lower-wasm = { path = "../vc-lower-wasm" }
vc-verify = { path = "../vc-verify" }

[dev-dependencies]
serde_json = { workspace = true }
