[package]
name = "vc-verify"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Sandboxed Wasm execution with deterministic fuel metering"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
wasmparser = "0.245.1"
wasmtime = { workspace = true }

[dev-dependencies]
# Align with Wasmtime 43.x / wasm-tools 1.245.x Wasm encoding family.
wat = "=1.245.1"
